@@ -21,36 +21,51 @@ import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Consumer;
 
-import reactor.core.publisher.Flux;
-
-import org.springframework.ai.model.Media;
+import org.springframework.ai.chat.client.advisor.DefaultAroundAdvisorChain;
+import org.springframework.ai.chat.client.advisor.api.AdvisedRequest;
+import org.springframework.ai.chat.client.advisor.api.AdvisedResponse;
+import org.springframework.ai.chat.client.advisor.api.Advisor;
+import org.springframework.ai.chat.client.advisor.api.CallAroundAdvisorChain;
+import org.springframework.ai.chat.client.advisor.api.CallAroundAdvisor;
+import org.springframework.ai.chat.client.advisor.api.StreamAroundAdvisor;
+import org.springframework.ai.chat.client.advisor.api.StreamAroundAdvisorChain;
+import org.springframework.ai.chat.client.observation.ChatClientObservationContext;
+import org.springframework.ai.chat.client.observation.ChatClientObservationConvention;
+import org.springframework.ai.chat.client.observation.ChatClientObservationDocumentation;
+import org.springframework.ai.chat.client.observation.DefaultChatClientObservationConvention;
 import org.springframework.ai.chat.messages.Message;
-import org.springframework.ai.chat.messages.SystemMessage;
+import org.springframework.ai.chat.messages.MessageType;
 import org.springframework.ai.chat.messages.UserMessage;
 import org.springframework.ai.chat.model.ChatModel;
 import org.springframework.ai.chat.model.ChatResponse;
 import org.springframework.ai.chat.model.StreamingChatModel;
 import org.springframework.ai.chat.prompt.ChatOptions;
 import org.springframework.ai.chat.prompt.Prompt;
-import org.springframework.ai.chat.prompt.PromptTemplate;
 import org.springframework.ai.converter.BeanOutputConverter;
 import org.springframework.ai.converter.StructuredOutputConverter;
+import org.springframework.ai.model.Media;
 import org.springframework.ai.model.function.FunctionCallback;
 import org.springframework.ai.model.function.FunctionCallbackWrapper;
-import org.springframework.ai.model.function.FunctionCallingOptions;
+import org.springframework.core.Ordered;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.io.Resource;
 import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.MimeType;
 import org.springframework.util.StringUtils;
+
+import io.micrometer.observation.Observation;
+import io.micrometer.observation.ObservationRegistry;
+import io.micrometer.observation.contextpropagation.ObservationThreadLocalAccessor;
+import reactor.core.publisher.Flux;
+import reactor.core.scheduler.Schedulers;
 
 /**
  * The default implementation of {@link ChatClient} as created by the
@@ -61,16 +76,16 @@ import org.springframework.util.StringUtils;
  * @author Josh Long
  * @author Arjen Poutsma
  * @author Soby Chacko
+ * @author Dariusz Jedrzejczyk
  * @since 1.0.0
  */
 public class DefaultChatClient implements ChatClient {
 
-	private final ChatModel chatModel;
+	private static final ChatClientObservationConvention DEFAULT_CHAT_CLIENT_OBSERVATION_CONVENTION = new DefaultChatClientObservationConvention();
 
 	private final DefaultChatClientRequestSpec defaultChatClientRequest;
 
-	public DefaultChatClient(ChatModel chatModel, DefaultChatClientRequestSpec defaultChatClientRequest) {
-		this.chatModel = chatModel;
+	public DefaultChatClient(DefaultChatClientRequestSpec defaultChatClientRequest) {
 		this.defaultChatClientRequest = defaultChatClientRequest;
 	}
 
@@ -80,8 +95,41 @@ public class DefaultChatClient implements ChatClient {
 	}
 
 	@Override
-	public ChatClientPromptRequestSpec prompt(Prompt prompt) {
-		return new DefaultChatClientPromptRequestSpec(this.chatModel, prompt);
+	public ChatClientRequestSpec prompt(String content) {
+		return prompt(new Prompt(content));
+	}
+
+	public ChatClientRequestSpec prompt(Prompt prompt) {
+
+		DefaultChatClientRequestSpec spec = new DefaultChatClientRequestSpec(this.defaultChatClientRequest);
+
+		// Options
+		if (prompt.getOptions() != null) {
+			spec.options(prompt.getOptions());
+		}
+
+		// Messages
+		List<Message> messages = prompt.getInstructions();
+
+		if (!CollectionUtils.isEmpty(messages)) {
+			var lastMessage = messages.get(messages.size() - 1);
+			if (lastMessage.getMessageType() == MessageType.USER) {
+				// Unzip the last message
+				var userMessage = (UserMessage) lastMessage;
+				if (StringUtils.hasText(userMessage.getContent())) {
+					spec.user(lastMessage.getContent());
+				}
+				var media = userMessage.getMedia();
+				if (!CollectionUtils.isEmpty(media)) {
+					spec.user(u -> u.media(media.toArray(new Media[media.size()])));
+				}
+				messages = messages.subList(0, messages.size() - 1);
+			}
+		}
+
+		spec.messages(messages);
+
+		return spec;
 	}
 
 	/**
@@ -221,7 +269,7 @@ public class DefaultChatClient implements ChatClient {
 
 	public static class DefaultAdvisorSpec implements AdvisorSpec {
 
-		private final List<RequestResponseAdvisor> advisors = new ArrayList<>();
+		private final List<Advisor> advisors = new ArrayList<>();
 
 		private final Map<String, Object> params = new HashMap<>();
 
@@ -235,17 +283,17 @@ public class DefaultChatClient implements ChatClient {
 			return this;
 		}
 
-		public AdvisorSpec advisors(RequestResponseAdvisor... advisors) {
+		public AdvisorSpec advisors(Advisor... advisors) {
 			this.advisors.addAll(List.of(advisors));
 			return this;
 		}
 
-		public AdvisorSpec advisors(List<RequestResponseAdvisor> advisors) {
+		public AdvisorSpec advisors(List<Advisor> advisors) {
 			this.advisors.addAll(advisors);
 			return this;
 		}
 
-		public List<RequestResponseAdvisor> getAdvisors() {
+		public List<Advisor> getAdvisors() {
 			return advisors;
 		}
 
@@ -259,10 +307,7 @@ public class DefaultChatClient implements ChatClient {
 
 		private final DefaultChatClientRequestSpec request;
 
-		private final ChatModel chatModel;
-
-		public DefaultCallResponseSpec(ChatModel chatModel, DefaultChatClientRequestSpec request) {
-			this.chatModel = chatModel;
+		public DefaultCallResponseSpec(DefaultChatClientRequestSpec request) {
 			this.request = request;
 		}
 
@@ -281,7 +326,7 @@ public class DefaultChatClient implements ChatClient {
 		}
 
 		protected <T> ResponseEntity<ChatResponse, T> doResponseEntity(StructuredOutputConverter<T> boc) {
-			var chatResponse = doGetChatResponse(this.request, boc.getFormat());
+			var chatResponse = doGetObservableChatResponse(this.request, boc.getFormat());
 			var responseContent = chatResponse.getResult().getOutput().getContent();
 			T entity = boc.convert(responseContent);
 
@@ -297,7 +342,7 @@ public class DefaultChatClient implements ChatClient {
 		}
 
 		private <T> T doSingleWithBeanOutputConverter(StructuredOutputConverter<T> boc) {
-			var chatResponse = doGetChatResponse(this.request, boc.getFormat());
+			var chatResponse = doGetObservableChatResponse(this.request, boc.getFormat());
 			var stringResponse = chatResponse.getResult().getOutput().getContent();
 			return boc.convert(stringResponse);
 		}
@@ -309,68 +354,36 @@ public class DefaultChatClient implements ChatClient {
 		}
 
 		private ChatResponse doGetChatResponse() {
-			return this.doGetChatResponse(this.request, "");
+			return this.doGetObservableChatResponse(this.request, "");
 		}
 
-		private ChatResponse doGetChatResponse(DefaultChatClientRequestSpec inputRequest, String formatParam) {
+		private ChatResponse doGetObservableChatResponse(DefaultChatClientRequestSpec inputRequest,
+				String formatParam) {
 
-			Map<String, Object> context = new ConcurrentHashMap<>();
-			context.putAll(inputRequest.getAdvisorParams());
-			DefaultChatClientRequestSpec advisedRequest = DefaultChatClientRequestSpec.adviseOnRequest(inputRequest,
-					context);
+			ChatClientObservationContext observationContext = new ChatClientObservationContext(inputRequest,
+					formatParam, false);
 
-			var processedUserText = StringUtils.hasText(formatParam)
-					? advisedRequest.getUserText() + System.lineSeparator() + "{spring_ai_soc_format}"
-					: advisedRequest.getUserText();
+			var observation = ChatClientObservationDocumentation.AI_CHAT_CLIENT.observation(
+					inputRequest.getCustomObservationConvention(), DEFAULT_CHAT_CLIENT_OBSERVATION_CONVENTION,
+					() -> observationContext, inputRequest.getObservationRegistry());
+			return observation.observe(() -> {
+				ChatResponse chatResponse = doGetChatResponse(inputRequest, formatParam, observation);
+				return chatResponse;
+			});
 
-			Map<String, Object> userParams = new HashMap<>(advisedRequest.getUserParams());
-			if (StringUtils.hasText(formatParam)) {
-				userParams.put("spring_ai_soc_format", formatParam);
-			}
+		}
 
-			var messages = new ArrayList<Message>(advisedRequest.getMessages());
-			var textsAreValid = (StringUtils.hasText(processedUserText)
-					|| StringUtils.hasText(advisedRequest.getSystemText()));
-			if (textsAreValid) {
-				if (StringUtils.hasText(advisedRequest.getSystemText())
-						|| !advisedRequest.getSystemParams().isEmpty()) {
-					var systemMessage = new SystemMessage(
-							new PromptTemplate(advisedRequest.getSystemText(), advisedRequest.getSystemParams())
-								.render());
-					messages.add(systemMessage);
-				}
-				UserMessage userMessage = null;
-				if (!CollectionUtils.isEmpty(userParams)) {
-					userMessage = new UserMessage(new PromptTemplate(processedUserText, userParams).render(),
-							advisedRequest.getMedia());
-				}
-				else {
-					userMessage = new UserMessage(processedUserText, advisedRequest.getMedia());
-				}
-				messages.add(userMessage);
-			}
+		private ChatResponse doGetChatResponse(DefaultChatClientRequestSpec inputRequestSpec, String formatParam,
+				Observation parentObservation) {
 
-			if (advisedRequest.getChatOptions() instanceof FunctionCallingOptions functionCallingOptions) {
-				if (!advisedRequest.getFunctionNames().isEmpty()) {
-					functionCallingOptions.setFunctions(new HashSet<>(advisedRequest.getFunctionNames()));
-				}
-				if (!advisedRequest.getFunctionCallbacks().isEmpty()) {
-					functionCallingOptions.setFunctionCallbacks(advisedRequest.getFunctionCallbacks());
-				}
-			}
-			var prompt = new Prompt(messages, advisedRequest.getChatOptions());
-			var chatResponse = this.chatModel.call(prompt);
+			AdvisedRequest advisedRequest = toAdvisedRequest(inputRequestSpec, formatParam);
 
-			ChatResponse advisedResponse = chatResponse;
-			// apply the advisors on response
-			if (!CollectionUtils.isEmpty(inputRequest.getAdvisors())) {
-				var currentAdvisors = new ArrayList<>(inputRequest.getAdvisors());
-				for (RequestResponseAdvisor advisor : currentAdvisors) {
-					advisedResponse = advisor.adviseResponse(advisedResponse, context);
-				}
-			}
+			// Apply the around advisor chain that terminates with the, last, model call
+			// advisor.
+			AdvisedResponse advisedResponse = inputRequestSpec.aroundAdvisorChainBuilder.build()
+				.nextAroundCall(advisedRequest);
 
-			return advisedResponse;
+			return advisedResponse.response();
 		}
 
 		public ChatResponse chatResponse() {
@@ -387,77 +400,45 @@ public class DefaultChatClient implements ChatClient {
 
 		private final DefaultChatClientRequestSpec request;
 
-		private final ChatModel chatModel;
-
-		public DefaultStreamResponseSpec(ChatModel chatModel, DefaultChatClientRequestSpec request) {
-			this.chatModel = chatModel;
+		public DefaultStreamResponseSpec(DefaultChatClientRequestSpec request) {
 			this.request = request;
 		}
 
-		private Flux<ChatResponse> doGetFluxChatResponse(DefaultChatClientRequestSpec inputRequest) {
+		private Flux<ChatResponse> doGetObservableFluxChatResponse(DefaultChatClientRequestSpec inputRequest) {
+			return Flux.deferContextual(contextView -> {
 
-			Map<String, Object> context = new ConcurrentHashMap<>();
-			context.putAll(inputRequest.getAdvisorParams());
-			DefaultChatClientRequestSpec advisedRequest = DefaultChatClientRequestSpec.adviseOnRequest(inputRequest,
-					context);
+				ChatClientObservationContext observationContext = new ChatClientObservationContext(inputRequest, "",
+						true);
 
-			String processedUserText = advisedRequest.getUserText();
-			Map<String, Object> userParams = new HashMap<>(advisedRequest.getUserParams());
+				Observation observation = ChatClientObservationDocumentation.AI_CHAT_CLIENT.observation(
+						inputRequest.getCustomObservationConvention(), DEFAULT_CHAT_CLIENT_OBSERVATION_CONVENTION,
+						() -> observationContext, inputRequest.getObservationRegistry());
 
-			var messages = new ArrayList<Message>(advisedRequest.getMessages());
-			var textsAreValid = (StringUtils.hasText(processedUserText)
-					|| StringUtils.hasText(advisedRequest.getSystemText()));
-			if (textsAreValid) {
-				UserMessage userMessage = null;
-				if (!CollectionUtils.isEmpty(userParams)) {
-					userMessage = new UserMessage(new PromptTemplate(processedUserText, userParams).render(),
-							advisedRequest.getMedia());
-				}
-				else {
-					userMessage = new UserMessage(processedUserText, advisedRequest.getMedia());
-				}
-				if (StringUtils.hasText(advisedRequest.getSystemText())
-						|| !advisedRequest.getSystemParams().isEmpty()) {
-					var systemMessage = new SystemMessage(
-							new PromptTemplate(advisedRequest.getSystemText(), advisedRequest.getSystemParams())
-								.render());
-					messages.add(systemMessage);
-				}
-				messages.add(userMessage);
-			}
+				observation.parentObservation(contextView.getOrDefault(ObservationThreadLocalAccessor.KEY, null))
+					.start();
 
-			if (advisedRequest.getChatOptions() instanceof
+				var initialAdvisedRequest = toAdvisedRequest(inputRequest, "");
 
-			FunctionCallingOptions functionCallingOptions) {
-				if (!advisedRequest.getFunctionNames().isEmpty()) {
-					functionCallingOptions.setFunctions(new HashSet<>(advisedRequest.getFunctionNames()));
-				}
-				if (!advisedRequest.getFunctionCallbacks().isEmpty()) {
-					functionCallingOptions.setFunctionCallbacks(advisedRequest.getFunctionCallbacks());
-				}
-			}
-			var prompt = new Prompt(messages, advisedRequest.getChatOptions());
+				// @formatter:off				
+				// Apply the around advisor chain that terminates with the, last,
+				// model call advisor.
+				 Flux<AdvisedResponse> stream = inputRequest.aroundAdvisorChainBuilder.build().nextAroundStream(initialAdvisedRequest);
 
-			var fluxChatResponse = this.chatModel.stream(prompt);
-
-			Flux<ChatResponse> advisedResponse = fluxChatResponse;
-			// apply the advisors on response
-			if (!CollectionUtils.isEmpty(inputRequest.getAdvisors())) {
-				var currentAdvisors = new ArrayList<>(inputRequest.getAdvisors());
-				for (RequestResponseAdvisor advisor : currentAdvisors) {
-					advisedResponse = advisor.adviseResponse(advisedResponse, context);
-				}
-			}
-
-			return advisedResponse;
+				 return stream
+					.map(AdvisedResponse::response)
+					.doOnError(observation::error)
+					.doFinally(s -> observation.stop())
+					.contextWrite(ctx -> ctx.put(ObservationThreadLocalAccessor.KEY, observation));
+				 // @formatter:on
+			});
 		}
 
 		public Flux<ChatResponse> chatResponse() {
-			return doGetFluxChatResponse(this.request);
+			return doGetObservableFluxChatResponse(this.request);
 		}
 
 		public Flux<String> content() {
-			return doGetFluxChatResponse(this.request).map(r -> {
+			return doGetObservableFluxChatResponse(this.request).map(r -> {
 				if (r.getResult() == null || r.getResult().getOutput() == null
 						|| r.getResult().getOutput().getContent() == null) {
 					return "";
@@ -469,6 +450,10 @@ public class DefaultChatClient implements ChatClient {
 	}
 
 	public static class DefaultChatClientRequestSpec implements ChatClientRequestSpec {
+
+		private final ObservationRegistry observationRegistry;
+
+		private final ChatClientObservationConvention customObservationConvention;
 
 		private final ChatModel chatModel;
 
@@ -490,44 +475,54 @@ public class DefaultChatClient implements ChatClient {
 
 		private final Map<String, Object> systemParams = new HashMap<>();
 
-		private final List<RequestResponseAdvisor> advisors = new ArrayList<>();
+		private final List<Advisor> advisors = new ArrayList<>();
 
 		private final Map<String, Object> advisorParams = new HashMap<>();
 
+		private final DefaultAroundAdvisorChain.Builder aroundAdvisorChainBuilder;
+
+		private ObservationRegistry getObservationRegistry() {
+			return this.observationRegistry;
+		}
+
+		private ChatClientObservationConvention getCustomObservationConvention() {
+			return this.customObservationConvention;
+		}
+
 		public String getUserText() {
-			return userText;
+			return this.userText;
 		}
 
 		public Map<String, Object> getUserParams() {
-			return userParams;
+			return this.userParams;
 		}
 
 		public String getSystemText() {
-			return systemText;
+			return this.systemText;
 		}
 
 		public Map<String, Object> getSystemParams() {
-			return systemParams;
+			return this.systemParams;
 		}
 
 		public ChatOptions getChatOptions() {
-			return chatOptions;
+			return this.chatOptions;
 		}
 
-		public List<RequestResponseAdvisor> getAdvisors() {
-			return advisors;
+		public List<Advisor> getAdvisors() {
+			return this.advisors;
 		}
 
 		public Map<String, Object> getAdvisorParams() {
-			return advisorParams;
+			return this.advisorParams;
 		}
 
 		public List<Message> getMessages() {
-			return messages;
+			return this.messages;
 		}
 
 		public List<Media> getMedia() {
-			return media;
+			return this.media;
 		}
 
 		public List<String> getFunctionNames() {
@@ -535,19 +530,21 @@ public class DefaultChatClient implements ChatClient {
 		}
 
 		public List<FunctionCallback> getFunctionCallbacks() {
-			return functionCallbacks;
+			return this.functionCallbacks;
 		}
 
 		/* copy constructor */
 		DefaultChatClientRequestSpec(DefaultChatClientRequestSpec ccr) {
 			this(ccr.chatModel, ccr.userText, ccr.userParams, ccr.systemText, ccr.systemParams, ccr.functionCallbacks,
-					ccr.messages, ccr.functionNames, ccr.media, ccr.chatOptions, ccr.advisors, ccr.advisorParams);
+					ccr.messages, ccr.functionNames, ccr.media, ccr.chatOptions, ccr.advisors, ccr.advisorParams,
+					ccr.observationRegistry, ccr.customObservationConvention);
 		}
 
 		public DefaultChatClientRequestSpec(ChatModel chatModel, String userText, Map<String, Object> userParams,
 				String systemText, Map<String, Object> systemParams, List<FunctionCallback> functionCallbacks,
 				List<Message> messages, List<String> functionNames, List<Media> media, ChatOptions chatOptions,
-				List<RequestResponseAdvisor> advisors, Map<String, Object> advisorParams) {
+				List<Advisor> advisors, Map<String, Object> advisorParams, ObservationRegistry observationRegistry,
+				ChatClientObservationConvention customObservationConvention) {
 
 			this.chatModel = chatModel;
 			this.chatOptions = chatOptions != null ? chatOptions.copy()
@@ -564,6 +561,53 @@ public class DefaultChatClient implements ChatClient {
 			this.media.addAll(media);
 			this.advisors.addAll(advisors);
 			this.advisorParams.putAll(advisorParams);
+			this.observationRegistry = observationRegistry;
+			this.customObservationConvention = customObservationConvention;
+
+			// @formatter:off		
+			// At the stack bottom add the non-streaming and streaming model call advisors.
+			// They play the role of the last advisor in the around advisor chain.				
+			this.advisors.add(new CallAroundAdvisor() {
+
+				@Override
+				public String getName() {						
+					return CallAroundAdvisor.class.getSimpleName();
+				}
+
+				@Override
+				public int getOrder() {
+					return Ordered.LOWEST_PRECEDENCE;
+				}
+
+				@Override					
+				public AdvisedResponse aroundCall(AdvisedRequest advisedRequest, CallAroundAdvisorChain chain) {
+					return new AdvisedResponse(chatModel.call(advisedRequest.toPrompt()), Collections.unmodifiableMap(advisedRequest.adviseContext()));
+				}
+			});
+
+			this.advisors.add(new StreamAroundAdvisor() {
+
+				@Override
+				public String getName() {
+					return StreamAroundAdvisor.class.getSimpleName();
+				}
+
+				@Override
+				public int getOrder() {
+					return Ordered.LOWEST_PRECEDENCE;
+				}
+
+				@Override
+				public Flux<AdvisedResponse> aroundStream(AdvisedRequest advisedRequest, StreamAroundAdvisorChain chain) {
+					return chatModel.stream(advisedRequest.toPrompt())
+					.map( chatResponse -> new AdvisedResponse(chatResponse, Collections.unmodifiableMap(advisedRequest.adviseContext())))
+					.publishOn(Schedulers.boundedElastic());// TODO add option to disable.
+				}
+			});
+			// @formatter:on
+
+			this.aroundAdvisorChainBuilder = DefaultAroundAdvisorChain.builder(observationRegistry)
+				.pushAll(this.advisors);
 		}
 
 		/**
@@ -571,7 +615,8 @@ public class DefaultChatClient implements ChatClient {
 		 * settings are replicated from this {@code ChatClientRequest}.
 		 */
 		public Builder mutate() {
-			DefaultChatClientBuilder builder = (DefaultChatClientBuilder) ChatClient.builder(chatModel)
+			DefaultChatClientBuilder builder = (DefaultChatClientBuilder) ChatClient
+				.builder(chatModel, this.observationRegistry, this.customObservationConvention)
 				.defaultSystem(s -> s.text(this.systemText).params(this.systemParams))
 				.defaultUser(u -> u.text(this.userText)
 					.params(this.userParams)
@@ -592,18 +637,21 @@ public class DefaultChatClient implements ChatClient {
 			consumer.accept(as);
 			this.advisorParams.putAll(as.getParams());
 			this.advisors.addAll(as.getAdvisors());
+			this.aroundAdvisorChainBuilder.pushAll(as.getAdvisors());
 			return this;
 		}
 
-		public ChatClientRequestSpec advisors(RequestResponseAdvisor... advisors) {
+		public ChatClientRequestSpec advisors(Advisor... advisors) {
 			Assert.notNull(advisors, "the advisors must be non-null");
-			this.advisors.addAll(List.of(advisors));
+			this.advisors.addAll(Arrays.asList(advisors));
+			this.aroundAdvisorChainBuilder.pushAll(Arrays.asList(advisors));
 			return this;
 		}
 
-		public ChatClientRequestSpec advisors(List<RequestResponseAdvisor> advisors) {
+		public ChatClientRequestSpec advisors(List<Advisor> advisors) {
 			Assert.notNull(advisors, "the advisors must be non-null");
 			this.advisors.addAll(advisors);
+			this.aroundAdvisorChainBuilder.pushAll(advisors);
 			return this;
 		}
 
@@ -727,41 +775,35 @@ public class DefaultChatClient implements ChatClient {
 		}
 
 		public CallResponseSpec call() {
-			return new DefaultCallResponseSpec(chatModel, this);
+			return new DefaultCallResponseSpec(this);
 		}
 
 		public StreamResponseSpec stream() {
-			return new DefaultStreamResponseSpec(chatModel, this);
+			return new DefaultStreamResponseSpec(this);
 		}
 
-		public static DefaultChatClientRequestSpec adviseOnRequest(DefaultChatClientRequestSpec inputRequest,
-				Map<String, Object> context) {
+	}
 
-			DefaultChatClientRequestSpec advisedRequest = inputRequest;
-
-			if (!CollectionUtils.isEmpty(inputRequest.advisors)) {
-				AdvisedRequest adviseRequest = new AdvisedRequest(inputRequest.chatModel, inputRequest.userText,
-						inputRequest.systemText, inputRequest.chatOptions, inputRequest.media,
-						inputRequest.functionNames, inputRequest.functionCallbacks, inputRequest.messages,
-						inputRequest.userParams, inputRequest.systemParams, inputRequest.advisors,
-						inputRequest.advisorParams);
-
-				// apply the advisors onRequest
-				var currentAdvisors = new ArrayList<>(inputRequest.advisors);
-				for (RequestResponseAdvisor advisor : currentAdvisors) {
-					adviseRequest = advisor.adviseRequest(adviseRequest, context);
-				}
-
-				advisedRequest = new DefaultChatClientRequestSpec(adviseRequest.chatModel(), adviseRequest.userText(),
-						adviseRequest.userParams(), adviseRequest.systemText(), adviseRequest.systemParams(),
-						adviseRequest.functionCallbacks(), adviseRequest.messages(), adviseRequest.functionNames(),
-						adviseRequest.media(), adviseRequest.chatOptions(), adviseRequest.advisors(),
-						adviseRequest.advisorParams());
-			}
-
-			return advisedRequest;
+	private static AdvisedRequest toAdvisedRequest(DefaultChatClientRequestSpec inputRequest, String formatParam) {
+		Map<String, Object> advisorContext = new ConcurrentHashMap<>(inputRequest.getAdvisorParams());
+		if (StringUtils.hasText(formatParam)) {
+			advisorContext.put("formatParam", formatParam);
 		}
 
+		return new AdvisedRequest(inputRequest.chatModel, inputRequest.userText, inputRequest.systemText,
+				inputRequest.chatOptions, inputRequest.media, inputRequest.functionNames,
+				inputRequest.functionCallbacks, inputRequest.messages, inputRequest.userParams,
+				inputRequest.systemParams, inputRequest.advisors, inputRequest.advisorParams, advisorContext);
+	}
+
+	public static DefaultChatClientRequestSpec toDefaultChatClientRequestSpec(AdvisedRequest advisedRequest,
+			ObservationRegistry observationRegistry, ChatClientObservationConvention customObservationConvention) {
+
+		return new DefaultChatClientRequestSpec(advisedRequest.chatModel(), advisedRequest.userText(),
+				advisedRequest.userParams(), advisedRequest.systemText(), advisedRequest.systemParams(),
+				advisedRequest.functionCallbacks(), advisedRequest.messages(), advisedRequest.functionNames(),
+				advisedRequest.media(), advisedRequest.chatOptions(), advisedRequest.advisors(),
+				advisedRequest.advisorParams(), observationRegistry, customObservationConvention);
 	}
 
 	// Prompt
@@ -822,27 +864,6 @@ public class DefaultChatClient implements ChatClient {
 				}
 				return r.getResult().getOutput().getContent();
 			}).filter(StringUtils::hasLength);
-		}
-
-	}
-
-	public static class DefaultChatClientPromptRequestSpec implements ChatClientPromptRequestSpec {
-
-		private final ChatModel chatModel;
-
-		private final Prompt prompt;
-
-		public DefaultChatClientPromptRequestSpec(ChatModel chatModel, Prompt prompt) {
-			this.chatModel = chatModel;
-			this.prompt = prompt;
-		}
-
-		public CallPromptResponseSpec call() {
-			return new DefaultCallPromptResponseSpec(this.chatModel, this.prompt);
-		}
-
-		public StreamPromptResponseSpec stream() {
-			return new DefaultStreamPromptResponseSpec(this.chatModel, this.prompt);
 		}
 
 	}
